--- a/chess_game_backend/src/main/resources/application.properties
+++ b/chess_game_backend/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info,metrics
@@ -20,9 +21,6 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
-
-# Respect X-Forwarded-* / Forwarded headers so redirects preserve external scheme/host/port
-server.forward-headers-strategy=framework
 
 # Respect X-Forwarded-* / Forwarded headers so redirects preserve external scheme/host/port
 server.forward-headers-strategy=framework
