--- a/chess_game_backend/build.gradle
+++ b/chess_game_backend/build.gradle
@@ -30,6 +30,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// Jakarta Bean Validation provider (Hibernate Validator) for Spring Boot 3.x
+	implementation 'org.hibernate.validator:hibernate-validator'
+	// Jakarta Validation API (managed by Spring Boot BOM)
+	implementation 'jakarta.validation:jakarta.validation-api'
+
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
