--- a/chess_game_backend/src/main/resources/application.properties
+++ b/chess_game_backend/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 management.endpoints.web.exposure.include=health,info,metrics
 
 # Swagger/OpenAPI Configuration
+# /api-docs -> OpenAPI JSON (springdoc)
+# /swagger-ui/index.html -> UI, HelloController redirects /docs to here
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui/index.html
 springdoc.swagger-ui.operationsSorter=method
