--- a/chess_game_backend/src/main/resources/application.properties
+++ b/chess_game_backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=chessgamebackend
 
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+# Add DB_CLOSE_ON_EXIT=FALSE to avoid shutdown warnings in logs when app stops
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
